--- a/react-serverless-blog/package.json
+++ b/react-serverless-blog/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "buttercms": "^1.1.0",
+    "lightgallery.js": "^1.0.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-helmet": "^5.2.0",
